# tui_prompter

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/workflows/: ci.yml
man/: tp.1
src/: app.rs  cli.rs  config.rs  event.rs  input.rs  main.rs  ui.rs
