[package]
name = "tui_prompter"
version = "1.0.0"
edition = "2024"
authors = ["Pedro Ramos"]
description = "A terminal-based teleprompter application"
license = "MIT"
readme = "README.md"
keywords = ["tui", "teleprompter", "terminal", "ratatui"]
categories = ["command-line-utilities"]

[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
edit = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
atty = "0.2"
tui-big-text = "0.7"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
